-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.0 Beta 3
-
None
Touching Map causes a crash in QQuickGeoMapGestureArea::canStartPan() as it tries to access a null m_mousePoint.
NB: Already have a patch for this bug.
For Gerrit Dashboard: QTBUG-67580 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
225539,3 | QQuickGeoMapGestureArea: Fix crasher when m_mousePoint is null | 5.11 | qt/qtlocation | Status: MERGED | +2 | 0 |