QQuickGeoMapGestureArea: Fix crasher when m_mousePoint is null

Happens when the first input it receives is a touch one.

Task-number: QTBUG-67580
Change-Id: Ia9441c753da15f2fe907901450d182027e11c8aa
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>